--- a/pom.xml
+++ b/pom.xml
@@ -32,27 +32,11 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.1.0</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <minimizeJar>true</minimizeJar>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.1.0</version>
                 <configuration>
                     <relocations>
                         <relocation>
-                            <pattern>org.bstats</pattern>
-                            <shadedPattern>me.hsgamer.blockbreakcounter</shadedPattern>
+                            <pattern>org.bstats.bukkit</pattern>
+                            <shadedPattern>me.hsgamer.blockbreakcounter.metrics</shadedPattern>
                         </relocation>
                     </relocations>
                 </configuration>
@@ -108,7 +92,7 @@
         </dependency>
         <dependency>
             <groupId>org.bstats</groupId>
-            <artifactId>bstats-bukkit</artifactId>
+            <artifactId>bstats-bukkit-lite</artifactId>
             <version>1.2</version>
             <scope>compile</scope>
         </dependency>
